# Parser_ini

./: ReadMe.md
Parser_ini4/: Parser_ini4.sln
Parser_ini4/Parser_ini4/: CMakeLists.txt  Lib_ini.cpp  Lib_ini.h  Menu.cpp  Menu.h  Parser_ini.cpp  Parser_ini.h  Parser_ini4.vcxproj  Parser_ini4.vcxproj.filters  example4.ini  main.cpp
